# superrare-watcher

./: .gitignore  Dockerfile  README.md  pyproject.toml  scrapy.cfg
suprarewatcher/: discord.py  items.py  settings.py
suprarewatcher/spiders/: bidwatcher.py
