[tool.poetry]
name = "suprarewatcher"
version = "0.1.0"
description = "SuperRare auction tracker based on Scrapy"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Scrapy = "^2.5.1"
requests = "^2.26.0"
jsonlines = "^2.0.0"
click = "^8.0.3"
pydantic = "^1.8.2"

[tool.poetry.dev-dependencies]
black = "^21.9b0"
ipdb = "^0.13.9"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
